force-app/main/default/objects/KB_Setup_Wizard_State__c/KB_Setup_Wizard_State__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Persisted state for the first-run setup experience wizard.</description>
    <label>KB Setup Wizard State</label>
</CustomObject>