force-app/main/default/objects/KB_Setup_Wizard_State__c/fields/Knowledge_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Strategy__c</fullName>
    <defaultValue>&quot;KnowledgeKavDirect&quot;</defaultValue>
    <description>Selected knowledge strategy for setup.</description>
    <label>Knowledge Strategy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>