force-app/main/default/objects/KB_Setup_Wizard_State__c/fields/Last_Validated_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Validated_At__c</fullName>
    <description>Timestamp of the latest setup validation run.</description>
    <label>Last Validated At</label>
    <type>DateTime</type>
</CustomField>