force-app/main/default/objects/KB_Setup_Wizard_State__c/fields/Last_Validation_JSON__c.field-meta.xml
<CustomField>
    <fullName>Last_Validation_JSON__c</fullName>
    <description>Serialized results from the latest final validation check.</description>
    <label>Last Validation JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>