force-app/main/default/objects/KB_Setup_Wizard_State__c/fields/Query_Prefilters_JSON__c.field-meta.xml
<CustomField>
    <fullName>Query_Prefilters_JSON__c</fullName>
    <description>Serialized JSON prefilters. publishStatus and language are read at runtime by KBRuntimeConfigService.getRuntimeFilters() and feed SOQL article selection in the Batch Runner and KPI dashboards. articleType and titlePattern are deserialized into RuntimeFilters but no runtime caller reads them today (validation only). Never applied to dedup candidate search — neither the Data Cloud vector_search() path nor the Tier 2 SOQL fallback honor prefilters, so admins running the same scan with different prefilter configs see the same dedup candidates on the same dataset.</description>
    <label>Query Prefilters JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>