force-app/main/default/objects/KB_Setup_Wizard_State__c/fields/Setup_Completed__c.field-meta.xml
<CustomField>
    <fullName>Setup_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether required setup validations have passed.</description>
    <label>Setup Completed</label>
    <type>Checkbox</type>
</CustomField>