force-app/main/default/objects/KB_Setup_Wizard_State__c/fields/Wizard_State_JSON__c.field-meta.xml
<CustomField>
    <fullName>Wizard_State_JSON__c</fullName>
    <description>Serialized wizard step state for resumable setup.</description>
    <label>Wizard State JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>